<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName">WGU Surfer</string>
    <string name="mainLbl1">Current Term</string>
    <string name="mainLbl2">View All Terms</string>
    <string name="mainLbl3">Progress Tracker</string>
    <string name="supportLbl">Support</string>
    <string name="editTerm">Edit Term</string>
    <string name="editNote">Edit Note</string>
    <string name="surfer_img">surfer_Img</string>
    <string name="wgutext_img">surfer_text_img</string>
    <string name="currterm_btn">currTerm_btn</string>
    <string name="currterm_img">currterm_img</string>
    <string name="allTerms_img">currterm_img</string>
    <string name="addTermBtn">Add Term</string>
    <string name="addTermBtn2">Add New Term</string>
    <string name="addNewTerm"><u>Add New Term</u></string>
    <string name="courseAdd">course_add</string>
    <string name="PH_currTermLbl">Spring 2020 Term</string>
    <string name="PH_startTermLbl">11/01/2019</string>
    <string name="PH_endTermLbl">04/31/2020</string>
    <string name="PH_term_dates">11/01/2019 – 04/31/2020</string>
    <string name="EditTerm">Edit Term</string>
    <string name="coursesLbl">Courses</string>
    <string name="currCoursesLbl">Courses For The Current Term</string>
    <string name="termsLbl">All Terms</string>
    <string name="SDEditBtn">SDEditBtn</string>
    <string name="EDEditBtn">EDEditBtn</string>
    <string name="deleteC">Delete Course</string>
    <string name="deleteT">Delete Term</string>
    <string name="deleteA">Delete Assessment</string>
    <string name="deleteN">Delete Note</string>
    <string name="longClickEditTerm">*Long press on the term you would like to edit.</string>
    <string name="clickToTerm">*Click on the term to see term details.</string>
    <string name="swipeDeleteC">*Swipe left to delete course from current term.</string>
    <string name="swipeUpT">Swipe up to add new term. Swipe down to dismiss.</string>
    <string name="swipeDeleteT">*Swipe left to delete term.</string>
    <string name="menu_all_terms_data">Add Test Data</string>
    <string name="menu_curr_course_data">Add Test Data</string>
    <string name="support">Support</string>
    <string name="menu_edit_course">Edit Course</string>
    <string name="menu_drop_course">Drop Course</string>
    <string name="termNameFloat">Term Name:</string>
    <string name="PH_courseName">Mobile Application Development - C196</string>
    <string name="PH_termName">Spring 2020</string>
    <string name="termName">Term Name</string>
    <string name="termSDText">Select Term Start Date</string>
    <string name="termEDText">Select Term End Date</string>
    <string name="termSDFloatLbl">Term Start Date:</string>
    <string name="termEDFloatLbl">Term End Date:</string>
    <string name="popUpStart">Term Start Date</string>
    <string name="popUpEnd">Term End Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currTermInfo">**To edit terms and courses go to "View All Terms"</string>
    <string name="new_course_info">**Start and end dates must be within the associated term.</string>
    <string name="new_assess_info">**Anticipated goal date must be within the associated course.</string>
    <string name="in_term_info">**Course start date must be future date if term has started.</string>
    <string name="course_color_key">Course Color Key:</string>
    <string name="in_progress">In Progress = GREEN</string>
    <string name="plan_to_take">Plan To Take = YELLOW</string>
    <string name="dropped">Dropped = RED</string>
    <string name="completed">Completed = CYAN</string>
    <string name="scrHeader"><u>Add New Course</u></string>
    <string name="addNewCBtn">Add New Course</string>
    <string name="course_nameHint">Course Name</string>
    <string name="start_dateHint">Start Date</string>
    <string name="anti_end_dateHint">Anticipated End Date</string>
    <string name="mentor_nameHint">Course Mentor Name</string>
    <string name="mentor_emailHint">Course Mentor Email</string>
    <string name="mentor_phoneHint">Course Mentor Phone</string>
    <string name="c_bot_nav_home">Course Home</string>
    <string name="c_bot_nav_assessments">Assessments</string>
    <string name="c_bot_nav_course_mentor">Course Mentor</string>
    <string name="c_bot_nav_course_mentor2"><u>Course Mentor</u></string>
    <string name="c_bot_nav_notes">Course Notes</string>
    <string name="c_desc_text">Course Description</string>
    <string name="c_desc_text2"><u>Course Description</u></string>
    <string name="add_p_assess_header"><u>Add New Performance Assessment</u></string>
    <string name="add_p_assess_btn_txt">Add New Performance Assessment</string>
    <string name="add_o_assess_header"><u>Add New Objective Assessment</u></string>
    <string name="add_o_assess_btn_txt">Add New Objective Assessment</string>
    <string name="p_assess_name">Performance Assessment Name</string>
    <string name="o_assess_name">Objective Assessment Name</string>
    <string name="edit_p_assess_header"><u>Edit Performance Assessment</u></string>
    <string name="edit_o_assess_header"><u>Edit Objective Assessment</u></string>
    <string name="edit_p_btn">Edit Performance Assessment</string>
    <string name="edit_o_btn">Edit Objective Assessment</string>
    <string name="goal_dateHint">Goal Date</string>
    <string name="sched_SD_Hint">Scheduled Start Date</string>
    <string name="PH_assess_p_name">Performance Assessment Name</string>
    <string name="PH_assess_o_name">Objective Assessment Name</string>
    <string name="course_SD">Course Start Date:</string>
    <string name="course_ED">Course Anticipated End Date:</string>
    <string name="course_dueD">Course Due Date:</string>
    <string name="course_status_lbl">Current Status:</string>
    <string name="status_typePH">In Progress</string>
    <string name="mentor_name_PH">Eric Smith</string>
    <string name="mentor_phone_PH">(555) 678–4432</string>
    <string name="mentor_email_PH">esmi268@wgu.edu</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="edit_scr_Header"><u>Edit Course</u></string>
    <string name="mentor_phone_PH_u"><u>(555) 678–4432</u></string>
    <string name="mentor_email_PH_u"><u>esmi268@wgu.edu</u></string>
    <string name="edit_c_lbl">Edit Course</string>
    <string name="edit_mentor_lbl">Edit Mentor</string>
    <string name="in_progress_fab">In Progress</string>
    <string name="plan_to_take_fab">Plan To Take</string>
    <string name="select_status">Choose course status:</string>
    <string-array name="status_spinner">
        <item>In Progress</item>
        <item>Plan To Take</item>
        <item>Dropped</item>
        <item>Completed</item>
    </string-array>
    <string-array name="status_spinner_no_drop">
        <item>In Progress</item>
        <item>Plan To Take</item>
    </string-array>
    <string name="drop_info">This course is dropped. Assessments and course notes cannot be added.</string>
    <string name="info_text">info_text</string>
    <string name="perf_asses_txt">Performance Assessments</string>
    <string name="obj_asses_txt">Objective Assessments</string>
    <string name="perf_img_btn">perf_img_btn</string>
    <string name="add_assess_test_data">Add Assessments Data</string>
    <string name="PH_perf_name"><![CDATA[Algorithms, Complexity, & Recursiveness Assessment]]></string>
    <string name="home_tabs">Home</string>
    <string name="due_date_lbl">Due Date</string>
    <string name="mentor_img_desc">mentor_img</string>
    <string name="edit_mentor_btn">Edit Mentor</string>
    <string name="edit_notes_header"><u>Edit Course Note</u></string>
    <string name="course_notes_txt">Course Notes</string>
    <string name="courseNote_id_lbl">Course ID:</string>
    <string name="note_id_PH">3</string>
    <string name="course_id_lbl">Course ID:</string>
    <string name="course_id_PH">2</string>
    <string name="notes_text">notes_text</string>
    <string name="save_note_btn">Save Note</string>
    <string name="share_notes_tb">Share Note</string>
    <string name="add_notes_data">Add Notes Data</string>
    <string name="noteAdd">noteAdd</string>
    <string name="add_note_btn">Add Note</string>
    <string name="add_note_txt"><u>Add Note</u></string>
    <string name="write_note_PH" tools:ignore="TypographyEllipsis">Write note here...</string>
    <string name="timestamp_txt" tools:ignore="TypographyDashes">2020-01-13 16:30:00</string>
    <string name="createdate_txt">Created:</string>
    <string name="lastUpdate_txt">Last Updated:</string>
    <string name="contact_support">Contact:</string>
    <string name="eric_wgu_com">esmi268@wgu.edu</string>
    <string name="eric_smith">Eric Smith</string>
    <string name="share_note_lbl">Share Note</string>
    <string name="track_courses_by_status"><u>Courses By Status</u></string>
    <string name="courses_in_progress">In Progress</string>
    <string name="courses_plan_to_take">Plan To Take</string>
    <string name="courses_completed">Completed</string>
    <string name="courses_dropped">Dropped</string>
    <string name="choose_status">Choose Status:</string>
    <string name="your_courses_txt">Your Courses</string>
    <string name="days_until_end_of_term">Days Left In Current Term</string>
    <string name="term_days_left">12</string>
    <string name="completed_courses">Completed Courses</string>
    <string name="dropped_courses">Dropped Courses</string>
    <string name="channel_name">WGU Surfer</string>
    <string name="channel_description">notifications</string>
    <string name="make_ct_active">Make current term?</string>
    <string name="make_ct_inactive">Remove as current term?</string>
    <string name="version_number">Version 1.1.1</string>
    <string name="reflect_lbl">Reflection</string>
    <string name="sources_lbl">Sources</string>
</resources>