<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless">

    <RelativeLayout
        android:id="@+id/view_background5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgRowBG"
        android:padding="@dimen/recycler_margin">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/recycler_margin"
            android:layout_marginLeft="@dimen/recycler_margin"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/recycler_margin"
            android:layout_marginRight="@dimen/recycler_margin"
            android:layout_marginBottom="@dimen/recycler_margin"
            android:background="@android:color/transparent"
            android:contentDescription="@string/deleteA"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/land_card_margin"
            android:layout_toStartOf="@+id/delete_icon"
            android:background="@android:color/transparent"
            android:text="@string/deleteN"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_foreground5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/recycler_margin">

        <TextView
            android:id="@+id/note_Name"
            style="@style/styleText1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/land_card_margin"
            android:padding="@dimen/land_card_margin"
            android:ellipsize="start"
            android:maxWidth="160dp"
            android:text="@string/PH_courseName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/note_id_lin"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/recycler_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/note_Name"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lastUpdate_lbl"
                style="@style/styleText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/lastUpdate_txt" />

            <TextView
                android:id="@+id/time_last_upd"
                style="@style/styleText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/land_card_margin"
                android:layout_gravity="start"
                android:text="@string/timestamp_txt" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>